Fix Weird Spacing Between Event Details and Lower Nav

--- a/css_files/home.css
+++ b/css_files/home.css
@@ -133,6 +133,7 @@
     flex-direction: column;
     align-items: center;
     margin: 3rem;
+    margin-bottom: 0rem;
 }
     
 .no-admission-fee {
